attemp 2 fix scroll on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -28,6 +28,7 @@ body {
     /* make site scroll on mobile */
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
+    height:100%;
 }
 
 p {
